# evidence-pack-verifier

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/evidence_pack_verifier/: __init__.py  cli.py  verifier.py
tests/: test_verifier.py
tests/fixtures/: evidence-pack.json  jwks.json
