[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satgate-evidence-pack-verifier"
version = "0.1.0"
description = "Open verifier for SatGate Evidence Packs and signed receipts"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "SatGate", email = "team@satgate.io" }]
keywords = ["satgate", "evidence-pack", "ed25519", "jcs", "agent-authority"]
dependencies = [
  "cryptography>=42",
  "requests>=2.31",
  "rfc8785>=0.1.4",
]

[project.scripts]
satgate-verify-evidence-pack = "evidence_pack_verifier.cli:main"
verify-evidence-pack = "evidence_pack_verifier.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "responses>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evidence_pack_verifier"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
